Expand future feature documentation with detailed customer-facing content
Significantly expand seasonality, VM, and Java/JVM public feature pages with
use cases, API examples, configuration, and prerequisites. Add network
recommendations internal design and public feature page; wire navigation and
gitignore exceptions for hand-authored docs-site feature files.

Co-authored-by: Cursor <cursoragent@cursor.com>