@@ -9,7 +9,8 @@
     **Scope:** JVM workloads on OpenShift (Spring Boot, Quarkus, plain Java)  
     **Plugin:** `java` (Enrich phase — builds on container recommendations)  
     **Analysis windows:** Same as containers (1 / 7 / 15 days) with JVM warmup exclusion  
-    **Gate:** `ROS_ENABLE_JVM_RECS` (off by default until release)
+    **Gate:** `ROS_ENABLE_JVM_RECS` (off by default until release)  
+    **Warmup exclusion:** First 45 minutes after pod start (configurable)
 
 ---
 
@@ -23,45 +24,115 @@ applications running on OpenShift:
 - **Thread pool configuration** — Quarkus and Spring worker counts matched to CPU limits
 - **Container memory optimization** — Limits that account for metaspace, thread stacks, and native memory — not just the heap
 
-Recommendations appear **alongside** container right-sizing guidance, adding a
+Recommendations appear **alongside** container right-sizing guidance in a
 `runtime_recommendations` section on container detail — not a separate product silo.
 
----
-
-## Supported frameworks
-
-| Framework | Planned support |
-|-----------|-----------------|
-| Hotspot OpenJDK | Full heap, GC, container memory |
-| Eclipse OpenJ9 / IBM Semeru | GC policy (`-Xgcpolicy`), heap sizing |
-| Quarkus (JVM mode) | Heap, GC, thread pool, `application.properties` output |
-| Quarkus (native image) | RSS-based container sizing only (no heap tuning) |
-| Spring Boot | Heap, GC, Tomcat/Undertow thread pools |
-| Plain Java | Heap and container memory via `jvm_*` metrics |
+**Why it matters:** Java is one of the most common languages on OpenShift, and
+**container-level rightsizing alone routinely mis-tunes JVM apps** — causing OOMKills,
+GC pauses, and wasted memory simultaneously.
 
 ---
 
-## The container memory problem
+## The problem — why Java is special
 
-Java applications are often **OOMKilled even when the heap was not full.**
+### JVM memory is not "one number"
 
-The JVM uses memory in several regions:
+The JVM divides process memory into regions that behave differently under load:
 
-| Region | Examples |
-|--------|----------|
-| **Heap** | Application objects (what `-Xmx` / MaxRAMPercentage controls) |
-| **Non-heap** | Metaspace (classes), thread stacks (~1 MiB × thread count), direct buffers, code cache, GC structures |
+| Region | What it holds | Controlled by |
+|--------|---------------|---------------|
+| **Heap** | Application objects | `-Xmx`, `-XX:MaxRAMPercentage` |
+| **Metaspace** | Class metadata | `-XX:MaxMetaspaceSize` (optional cap) |
+| **Thread stacks** | ~1 MiB × thread count | Thread pools, framework defaults |
+| **Code cache** | JIT compiled code | JVM ergonomics |
+| **Direct buffers** | NIO, Netty, gRPC | Application code |
+| **GC structures** | Collector overhead | Collector choice and heap size |
 
-Generic container recommendations look at **total cgroup memory**. Without JVM metrics,
-ROS cannot tell whether an OOM was caused by heap pressure or **metaspace / thread growth**.
+Generic container recommendations optimize **cgroup memory** as a single bucket.
+That works for Go or Node when RSS ≈ working set. For Java, **heap is only part of the story**.
 
-This plugin understands JVM memory anatomy and recommends container limits that cover
-**all** regions — and tells you when to raise the container limit instead of the heap.
+### Container OOMKill ≠ Java heap exhaustion
 
-**Example:**
+Kubernetes OOMKills the container when **total RSS** exceeds the cgroup limit — not when
+the heap is full.
 
-> *"OOMKill detected with heap at 40% of limit. Root cause: metaspace growth. Recommend:
-> increase container memory to 2.5 GiB — do not raise MaxRAMPercentage."*
+A common failure mode:
+
+1. Container limit: **2 GiB**
+2. `MaxRAMPercentage=80` → heap can grow to ~**1.6 GiB**
+3. Metaspace grows to **200 MiB** after deployments
+4. **50 threads** × ~1 MiB stack ≈ **50 MiB**
+5. Code cache + GC + direct buffers add hundreds of MiB
+6. **Working set exceeds 2 GiB** → **OOMKill** while heap shows **40–60%** used in metrics
+
+**Raising MaxRAMPercentage makes this worse** — it steals cgroup budget from non-heap regions.
+
+**The fix:** increase the **container limit** *or* **lower** MaxRAMPercentage to reserve cgroup space for non-heap.
+
+### JVM ergonomics follow CPU limits
+
+The JVM sets default parallelism (GC threads, ForkJoin pools, etc.) from
+`Runtime.availableProcessors()`, which on Kubernetes equals the **CPU limit**.
+
+| CPU limit | JVM assumption | Risk |
+|-----------|----------------|------|
+| 4 cores | 4 GC threads, modest pools | May under-utilize if request is low |
+| 0.5 cores | 1 GC thread | Long GC pauses on multi-GB heap |
+| 8 cores, Quarkus defaults | `core-threads` may follow cores | Under-threaded for I/O-heavy APIs |
+
+Thread pool recommendations align framework defaults with **allocated CPU**, not node size.
+
+### Warmup distorts short windows
+
+For the first **30–45 minutes** after start:
+
+- JIT compiles hot methods (CPU spike, code cache growth)
+- Heap grows as caches warm
+- GC patterns are not representative of steady state
+
+ROS excludes this **warmup period** so recommendations reflect production behavior, not startup.
+
+---
+
+## The container OOMKill problem (detailed)
+
+### Diagram in words
+
+```
+┌─────────────────────────────────────────────────────────────┐
+│  Kubernetes cgroup memory limit: 2 GiB                       │
+├─────────────────────────────────────────────────────────────┤
+│  ┌─────────────────────────────────────────────────────┐  │
+│  │ Heap (MaxRAMPercentage=80% → up to ~1.6 GiB)          │  │
+│  │  Objects, caches, session state                       │  │
+│  └─────────────────────────────────────────────────────┘  │
+│  Metaspace (~200 MiB after deploy)                          │
+│  Thread stacks (50 threads × ~1 MiB)                        │
+│  Code cache (~100 MiB)                                      │
+│  Direct buffers / native (variable)                         │
+│  GC overhead                                                │
+├─────────────────────────────────────────────────────────────┤
+│  If sum > 2 GiB → OOMKill (even if heap chart shows 40%)   │
+└─────────────────────────────────────────────────────────────┘
+```
+
+### Scenario walkthrough
+
+**Symptoms:**
+
+- Pod restarts with **OOMKilled**
+- Prometheus shows heap peaked at **60%** of limit
+- SRE raises `MaxRAMPercentage` from 50% → 75%
+- OOMKills **increase**
+
+**ROS diagnosis (planned):**
+
+> *"3 OOMKills in 7 days. Peak heap **60%** of container limit. Peak non-heap **350 MiB**.
+> Likely cause: **metaspace** or **direct buffer** growth. **Do not** raise MaxRAMPercentage.
+> Recommend: container limit **2.5 GiB** OR MaxRAMPercentage **45%** with metaspace cap review."*
+
+**Why it matters:** Misdiagnosed OOM loops waste weeks of tuning; the right lever is
+often **container limit** or **thread/direct buffer** control, not heap percent.
 
 ---
 
@@ -70,63 +141,149 @@ This plugin understands JVM memory anatomy and recommends container limits that 
 ### Heap sizing
 
 Analyzes peak heap usage over your chosen window (after warmup exclusion) and recommends
-`MaxRAMPercentage` so the JVM uses container memory efficiently without starving the guest.
+`MaxRAMPercentage` (Hotspot) or equivalent heap fraction so the JVM uses cgroup memory efficiently.
 
 **Example:**
 
-> *"Your application uses 400 MiB of its 2 GiB heap allocation. Recommend
-> MaxRAMPercentage=45% to save memory while maintaining performance."*
+> *"p95 heap usage **400 MiB** over 7 days. Container limit **2 GiB**. Recommend
+> **MaxRAMPercentage=45%** (~900 MiB heap cap) — leaves **~1.1 GiB** for non-heap and headroom."*
 
-### Garbage collector
+**Why it matters:** FinOps saves memory; SRE avoids heap-driven OOM while preserving slack for metaspace.
 
-Uses GC pause percentiles to recommend a collector suited to your latency and heap size goals.
+**Output format (Hotspot):**
 
-**Example:**
+```
+JDK_JAVA_OPTIONS="-XX:MaxRAMPercentage=45"
+```
 
-> *"High GC pause times detected (p95: 350 ms). Switching from G1GC to ZGC would reduce
-> tail latency for this 8 GiB heap on JDK 21."*
+### Container memory
 
-### Thread pools
-
-Aligns Quarkus or Spring worker threads with allocated CPU so thread pools are not starved
-on small limits or oversized on large nodes.
+Combines heap target, non-heap peak, and safety margin when cgroup usage exceeds what heap tuning alone can fix.
 
 **Example:**
 
-> *"Your Quarkus app has 4 worker threads on 8 cores. Recommend core-threads=16 for better
-> throughput under load."*
+> *"Total JVM footprint: heap p95 (**400 MiB**) + non-heap p95 (**350 MiB**) + 15% safety ≈ **860 MiB**.
+> Recommend: reduce container limit from **2 GiB** → **1 GiB** (cost profile)."*
 
-### Container limits
+**Why it matters:** Paying for 2 GiB limits on 860 MiB workloads multiplies cost across hundreds of replicas.
 
-Combines heap target, non-heap peak, and a safety margin into a container memory recommendation
-when cgroup usage exceeds what heap tuning alone can fix.
+### GC strategy
 
-**Example:**
-
-> *"Your container limit is 4 GiB but total JVM footprint peaks at 1.8 GiB. Safely reduce to
-> 2.5 GiB."*
-
-### OOM prevention
-
-Classifies OOMKills where heap usage was low — pointing to non-heap causes and the right fix.
+Uses GC pause percentiles and JDK/heap size rules to recommend a collector suited to your SLA.
 
 **Example:**
 
-> *"OOMKill detected with low heap usage. Root cause: metaspace growth. Recommend: increase
-> container limit, not heap."*
+> *"p95 GC pause **350 ms** on G1GC. JDK **21**, heap **6 GiB** qualifies for **ZGC Generational**.
+> Expected improvement: p95 pause **< 10 ms** for latency-sensitive APIs."*
+
+| Profile | Collector bias | When |
+|---------|----------------|------|
+| **Cost** | G1 / Parallel when pauses acceptable | Batch, internal tools |
+| **Performance** | ZGC / Shenandoah when pauses high | User-facing APIs |
+
+**OpenJ9 / Semeru:** Recommendations use `-Xgcpolicy:` instead of Hotspot `-XX:+Use*` flags.
+
+### Thread pools (Quarkus / Spring)
+
+Aligns worker threads with CPU limits for frameworks that default to core count.
+
+**Example (Quarkus):**
+
+> *"CPU limit **4 cores**, Quarkus `core-threads=4`. Recommend **core-threads=8** for I/O-heavy REST
+> (throughput profile) — or confirm CPU limit should be **2** if intentional."*
+
+**Example (Spring Boot):**
+
+> *"Tomcat `maxThreads=200` on **2 CPU** limit — thread contention likely. Recommend **maxThreads=50**
+> aligned with CPU, or raise CPU limit if load requires 200 threads."*
+
+### OOM prevention / diagnosis
+
+Classifies OOMKills where heap usage was low — pointing to non-heap causes.
+
+**Example:**
+
+> *"OOMKill with heap max **40%** of limit. Classification: **non_heap_oom**. Check
+> `-XX:MaxMetaspaceSize`, direct buffer leaks, and thread pool growth."*
 
 ---
 
-## Cost vs performance
+## Supported frameworks
 
-ROS will apply the same **dual-engine** model used for containers:
+### OpenJDK Hotspot
 
-| Profile | Behavior |
-|---------|----------|
-| **Cost** | Tighter heap percentiles (p95), smaller container margins (~15%), higher MaxRAMPercentage where safe, throughput-oriented GC |
-| **Performance** | Higher percentiles (p99/max), larger margins (25–50%), lower MaxRAMPercentage for headroom, low-latency GC (ZGC / Shenandoah) when pauses are high |
+**Full suite:** heap (`MaxRAMPercentage`), GC flags, thread hints (when metrics exist), container memory.
 
-You choose the engine per recommendation the same way as container right-sizing.
+Most common on OpenShift application images.
+
+### Eclipse OpenJ9 / IBM Semeru
+
+**Adapted recommendations:** GC via `-Xgcpolicy:gencon` / `balanced` etc.; heap sizing with OpenJ9 ergonomics.
+
+Same OOM anatomy — metaspace and stacks still matter.
+
+### Quarkus (JVM mode)
+
+**Heap + GC + thread pool** with optional `application.properties` snippets:
+
+```properties
+quarkus.thread-pool.core-threads=8
+quarkus.thread-pool.max-threads=32
+```
+
+### Quarkus Native (GraalVM)
+
+**Different profile:** no heap tuning; **RSS-based container sizing** only.
+
+Native image removes JVM heap/GC recommendations — container rightsizing remains primary.
+
+### Spring Boot
+
+**HTTP thread pools** (Tomcat/Undertow), connection pool advisories when metrics exposed, plus standard JVM tuning.
+
+Actuator Prometheus endpoint is the typical metrics source.
+
+### Plain Java
+
+Standard JVM tuning from `jvm_*` metrics; thread pool hints when executor metrics are present.
+
+---
+
+## Cost vs performance tradeoff
+
+ROS applies the same **dual-engine** model as containers:
+
+| Aspect | Cost engine | Performance engine |
+|--------|-------------|-------------------|
+| Heap percentile | p95 | p99 / max |
+| Container margin | ~15% | 25–50% |
+| MaxRAMPercentage | Higher when safe | Lower for spike headroom |
+| GC | Throughput-friendly if pauses OK | ZGC / Shenandoah when pauses high |
+| Goal | Minimize memory $ | Minimize tail latency |
+
+**How to choose:**
+
+- **Batch processing, ETL, internal cron** → cost profile; accept higher GC pause if throughput is fine.
+- **User-facing API, checkout, real-time** → performance profile; pay for headroom and low-latency GC.
+
+You select the engine per recommendation the same way as [container right-sizing](container-recommendations.md) — see [Dual engine](dual-engine.md).
+
+---
+
+## Warmup handling
+
+| Setting | Default | Purpose |
+|---------|---------|---------|
+| `ROS_JVM_WARMUP_MINUTES` | 45 | Exclude samples after pod start |
+
+**What we exclude:** First N minutes after each pod start in the observation window.
+
+**What you still get:** Steady-state heap, GC pause, and thread metrics for rightsizing.
+
+**Customer message:**
+
+> *"Recommendations based on steady-state behavior (warmup excluded). If you deploy
+> frequently, ensure medium/long terms include enough post-warmup hours."*
 
 ---
 
@@ -140,10 +297,96 @@ flowchart LR
   D -->|runtime_recommendations| E[API / UI]
 ```
 
-1. **Detection** — Identifies JVM workloads when `jvm_info` (and related) metrics are present in scraped application data.
-2. **Warmup exclusion** — Ignores the first **45 minutes** after pod start so JIT compilation does not skew heap and GC statistics.
-3. **Analysis** — Computes heap, non-heap, GC pause, and thread signals over the same term windows as container recommendations (with per-type minimum-data gates).
-4. **Enrichment** — Attaches JVM tuning to existing container recommendation detail; container CPU/memory recs remain the base layer.
+1. **Detection** — JVM workloads identified when `jvm_*` metrics exist in workload scrape data.
+2. **Warmup exclusion** — Post-start samples dropped from percentile calculations.
+3. **Analysis** — Heap, non-heap, GC pause, thread signals over container term windows.
+4. **Enrichment** — JVM tuning attached to container recommendation detail; CPU/memory recs remain the base layer.
+
+Without JVM metrics, ROS will **not** emit high-confidence JVM guidance (heuristic-only mode is **not** planned for initial release).
+
+---
+
+## What you'll see in the API
+
+JVM recommendations enrich **container detail** responses (planned shape):
+
+```json
+{
+  "container": "order-api",
+  "project": "commerce",
+  "workload": "order-api",
+  "recommendations": {
+    "medium_term": {
+      "cost": {
+        "config": {
+          "requests": {
+            "cpu": {"amount": 0.5, "format": "cores"},
+            "memory": {"amount": 1, "format": "GiB"}
+          }
+        },
+        "runtime_recommendations": {
+          "runtime": "jvm",
+          "framework_detected": "quarkus",
+          "jdk_version": "21",
+          "confidence": 0.92,
+          "items": [
+            {
+              "category": "heap",
+              "tunable": "MaxRAMPercentage",
+              "current_value": "80",
+              "recommended_value": "45",
+              "formatted_flag": "-XX:MaxRAMPercentage=45",
+              "rationale": "p95 heap 400 MiB; reserve cgroup space for non-heap"
+            },
+            {
+              "category": "gc",
+              "tunable": "collector",
+              "current_value": "G1GC",
+              "recommended_value": "ZGC",
+              "formatted_flag": "-XX:+UseZGC -XX:+ZGenerational",
+              "rationale": "p95 pause 350ms exceeds 200ms threshold on JDK 21"
+            },
+            {
+              "category": "threads",
+              "tunable": "quarkus.thread-pool.core-threads",
+              "current_value": "4",
+              "recommended_value": "8",
+              "formatted_flag": "quarkus.thread-pool.core-threads=8",
+              "rationale": "CPU limit 4; I/O-bound profile"
+            },
+            {
+              "category": "container_memory",
+              "tunable": "memory_limit",
+              "current_value": "2Gi",
+              "recommended_value": "1Gi",
+              "rationale": "heap + non-heap p95 + 15% margin"
+            }
+          ],
+          "oom_diagnosis": null
+        }
+      }
+    }
+  }
+}
+```
+
+**OOM example** (`oom_diagnosis` populated):
+
+```json
+"oom_diagnosis": {
+  "classification": "non_heap_oom",
+  "oom_count_7d": 3,
+  "heap_max_pct_of_limit": 0.60,
+  "message": "OOMKill with low heap usage — increase container limit or reduce MaxRAMPercentage; check metaspace"
+}
+```
+
+| Field | Meaning |
+|-------|---------|
+| `framework_detected` | quarkus, spring, hotspot, openj9, native |
+| `confidence` | Based on data days and metric completeness |
+| `formatted_flag` | Copy-paste for Deployment env or JVM options |
+| `category` | heap, gc, threads, container_memory, oom |
 
 ---
 
@@ -151,24 +394,28 @@ flowchart LR
 
 | Requirement | Why |
 |-------------|-----|
-| **JVM metrics endpoint** | Application must expose Prometheus metrics (`/actuator/prometheus`, `/q/metrics`, or JMX exporter sidecar) |
-| **User Workload Monitoring (UWM)** | Cluster must allow scraping workload metrics into the pipeline the operator uses |
-| **Container recommendations** | Java plugin runs in Enrich phase — container plugin must produce base recs first |
+| **JVM metrics endpoint** | Application exposes Prometheus metrics (`/actuator/prometheus`, `/q/metrics`, or JMX exporter sidecar) |
+| **User Workload Monitoring (UWM)** | Cluster allows scraping workload metrics into the operator pipeline |
+| **Container recommendations** | Java plugin runs in **Enrich** phase after container **Produce** |
+| **JDK / framework metrics** | `jvm_memory_used_bytes`, `jvm_gc_pause_seconds`, `jvm_threads_*`, etc. |
 
-Without JVM metrics, ROS will not emit high-confidence JVM guidance (heuristic-only mode is
-**not** planned for initial release).
+**Without JVM metrics:** recommendations fall back to **container-level analysis only** with **no** `runtime_recommendations` block — lower confidence for Java tuning.
+
+### Metric checklist (typical Micrometer / Prometheus)
+
+| Metric family | Used for |
+|---------------|----------|
+| `jvm_memory_used_bytes{area="heap"}` | Heap sizing |
+| `jvm_memory_used_bytes{area="nonheap"}` or metaspace series | Container memory, OOM class |
+| `jvm_gc_pause_seconds` | GC strategy |
+| `jvm_threads_live` | Thread/stack pressure |
+| `jvm_info` | JDK version for GC rules |
 
 ---
 
 ## Configuration
 
 Same **three-tier** model as other ROS features:
-
-1. **Environment variables** — Cluster-wide defaults (`ROS_ENABLE_JVM_RECS`, `ROS_JVM_WARMUP_MINUTES`, …)
-2. **Settings API** — Per-organization overrides for thresholds and terms (`recommendation_type=java`)
-3. **Compiled defaults** — Safe baselines in code
-
-Key planned environment variables:
 
 | Variable | Default | Purpose |
 |----------|---------|---------|
@@ -177,9 +424,11 @@ Key planned environment variables:
 | `ROS_JVM_MIN_RAM_PERCENT` | `50` | Floor for MaxRAMPercentage |
 | `ROS_JVM_MAX_RAM_PERCENT` | `90` | Ceiling for MaxRAMPercentage |
 | `ROS_JVM_GC_PAUSE_HIGH_MS` | `200` | Pause threshold for low-latency GC bias |
+| `ROS_JVM_NON_HEAP_FACTOR` | `1.20` | Safety margin on container memory |
 
-See the internal design document for the full threshold table:
-[`docs/design/java-recommendations.md`](../../../docs/design/java-recommendations.md).
+**Settings API:** `GET/PUT/DELETE .../settings/ros/thresholds/?recommendation_type=java`
+
+See [Configurable thresholds](configurable-thresholds.md).
 
 ---
 
